# ComfyUI-OpenAI-API-Refactored

./: .gitignore  README.md
apps/rust/comfyui-openai-api/: .cargo_check.out  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  cargo_check_out.txt  cargo_check_out_utf8.txt  tasks.json  构建.txt  重建并运行.bat
apps/rust/comfyui-openai-api/.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
apps/rust/comfyui-openai-api/config/: config.sample.yaml  config.yaml
apps/rust/comfyui-openai-api/src/: config.rs  error.rs  graceful.rs  main.rs  proxy.rs  recovery.rs  seed_tracker.rs  task_manager.rs  tracing_setup.rs  utils.rs
apps/rust/comfyui-openai-api/src/backend/: pool.rs  router.rs
apps/rust/comfyui-openai-api/src/cache/: image_cache.rs  mod.rs  response_cache.rs
apps/rust/comfyui-openai-api/src/handlers/: backends.rs  health.rs  image.rs  metrics.rs  mod.rs  models.rs  tasks.rs  video.rs  workflows_admin.rs
apps/rust/comfyui-openai-api/src/middleware/: idempotency.rs  mod.rs  rate_limiter.rs  request_id.rs
apps/rust/comfyui-openai-api/src/transport/: mod.rs  poll.rs  rate_limiter.rs  ws.rs
apps/rust/comfyui-openai-api/src/workflows/: mod.rs  registry.rs  template.rs
apps/rust/comfyui-openai-api/workflows/: FLUX2-Klein-Qwen-Image-More.json  FLUX2-Klein-Qwen-Image-One.json  Flux2-Klein9b-提示词优化 - 副本.json  Flux2-Klein9b-提示词优化.json  LTX2.3-Gemma-PromptRelay-Video.json  LTX2.3-Gemma-Video.json  flux.2.9b基本工作流.json  nunchaku-z-image-turbo基本工作流.json
comfyui_docker/: .env.sample  Dockerfile  build.sh  (+3 more)
(+2 files in other folders)
